<resources>
    <string name="app_name">Poemas</string>
    <string name="Ppoema1">
        (Año 1964)
Hombre valiente que un día
luchaste contra extranjeros,
quienes infames, muerte te dieron
y tus tierras sin tregua invadieron.

Moriste, ¡oh, Tecún Umán,
sobre tu cuerpo yacente,
con sudor sobre tu frente,
cayó sobre tu pecho ardiente
nuestro sagrado Quetzal,
simbolizando con esto
que muerto Tecún Umán
¡moría la libertad!

    </string>
    <string name="Ppoema2">
        (Año 2018)
Libertad es tu lema, en cautiverio no puedes habitar, prefieres muerte. Es por ello que tú nos representas, ¡nuestro amado Quetzal!.

Tu pecho rojo nos recuerda el día que fuera muerto el héroe nacional, Tecún Umán quien muriera en cruel batalla ¡en defensa de nuestra libertad!

Vuela libre en las montañas de esta tierra,Ave símbolo de belleza singular, alzaremos por siempre el estandarte del sagrado principio: ¡LIBERTAD!

    </string>
    <string name="Ppoema3">
        Año 1967
Primer Premio Rama de Poesía
Academia La Juventud Año 1971.

Oh, flor de flores, de belleza innata, que ostentas blancura inmaculada, permite que en tus pétalos de plata se inspire hoy mi alma ilusionada.

Igual como tu nido de esmeralda te arrulla con sus hojas, con dulzura arrullarán mis brazos la guirnalda que formaré exaltando tu hermosura.

Hermosa reina de mi bella tierra, dignate recibir este homenaje que mi más grande patriotrismo encierra.

Y recostada en el suavísimo paisaje quiero verte cuando la tarde cierra la mansión de la luz con un celaje.

    </string>
    <string name="Gpoema1">
        Mi traje azul claro, de lana,
cómodo como el de un mandarín chino,
y mi corbata roja, símbolo de sangre derramada,
dan color a las calles de Londres.
Un pedazo de cielo, algo divino,
se aburre monstruosamente en la metrópoli del mundo.
Mañana vestiré otra vez mi uniforme
para ser del todo gente y no importarle nada a nadie.

    </string>
    <string name="Gpoema2">
        Parece que hace siglos
no me miro al espejo,
y en los ojos de los vivos
por vergüenza no puedo,
y no reflejan nada
los ojos de los muertos.

Debo de haber cambiado de cara:
debo de tener hundida la frente;
mis labios deben de ser una sola línea recta;
debo de tener los ojos como dos alfileres.
¡El apego a la vida me debe de haber mudado
para que cuando me busque no me conozca la muerte!

    </string>
    <string name="Gpoema3">
Para el muro de un hospital de sangre.
Por los campos luchados se extienden los heridos.
Y de aquella extensión de cuerpos luchadores
salta un trigal de chorros calientes, extendidos
en roncos surtidores.

La sangre llueve siempre boca arriba, hacia el cielo.
Y las heridas suenan, igual que caracolas,
cuando hay en las heridas celeridad de vuelo,
esencia de las olas.

La sangre huele a mar, sabe a mar y a bodega.
La bodega del mar, del vino bravo, estalla
allí donde el herido palpitante se anega,
y florece, y se halla.

Herido estoy, miradme: necesito más vidas.
La que contengo es poca para el gran cometido
de sangre que quisiera perder por las heridas.
Decid quién no fue herido.

Mi vida es una herida de juventud dichosa.
¡Ay de quien no esté herido, de quien jamás se siente
herido por la vida, ni en la vida reposa
herido alegremente!

Si hasta a los hospitales se va con alegría,
se convierten en huertos de heridas entreabiertas,
de adelfos florecidos ante la cirugía.
de ensangrentadas puertas.
    </string>
    <string name="lpoema1">
        Me habéis amurallado para que me acostumbre. Pero aunque ahora no pueda ni intente dar un paso, ni siquiera proyecte fuga alguna, ya sé que es por allí por donde quiero ir, sé por dónde se va. Mirad, os lo señalo: por aquella ranura de poniente.

    </string>
    <string name="lpoema2">
        Mi madre decía: a mí me gustan las personas rectas. A mí me gustan las personas curvas, las ideas curvas, los caminos curvos, porque el mundo es curvo y la tierra es curva y el movimiento es curvo; y me gustan las curvas y los pechos curvos y los culos curvos, los sentimientos curvos; la ebriedad: es curva; las palabras curvas: el amor es curvo; ¡el vientre es curvo!; lo diverso es curvo. A mí me gustan los mundos curvos; el mar es curvo, la risa es curva, la alegría es curva, el dolor es curvo; las uvas: curvas; las naranjas: curvas; los labios: curvos; y los sueños; curvos; los paraísos, curvos (no hay otros paraísos); a mí me gusta la anarquía curva. El día es curvo y la noche es curva; ¡la aventura es curva! Y no me gustan las personas rectas, el mundo recto, las ideas rectas; a mí me gustan las manos curvas, los poemas curvos, las horas curvas: ¡contemplar es curvo!;

    </string>
    <string name="lpoema3">
        La primera noche ellos se acercan y cogen una flor de nuestro jardin, y no decimos nada. La segunda noche ya no se esconden pisan las flores, matan nuestro perro y no decimos nada. Hasta que un día el más frágil de ellos entra sólo en nuestra casa, nos roba la luna, y conociendo nuestro miedo nos arranca la voz de la garganta. Y porque no dijimos nada ya no podemos decir nada.

    </string>
</resources>