<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MAGuerra">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poemas de Guerra"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONVALECIENTE"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/paciente"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Gpoema1"
                android:textIsSelectable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COMOUFLAGE"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/soldado"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Gpoema2"
                android:textIsSelectable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EL HERIDO"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/herido"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Gpoema3"
                android:textIsSelectable="true"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>