<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MAPatria">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poemas de la Patria"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TECÚN UMÁN"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/tecun"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Ppoema1"
                android:textIsSelectable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AMADO QUETZAL"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/quetzal"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Ppoema2"
                android:textIsSelectable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MONJA BLANCA"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@drawable/monjablanca"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="20sp"
                android:text="@string/Ppoema3"
                android:textIsSelectable="true"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>